Fixed jumping issue with nav drodowns

--- a/assets/css/frontend/_navigation.scss
+++ b/assets/css/frontend/_navigation.scss
@@ -39,16 +39,7 @@ header .top-bar-right.desktop {
     border: none;
     border-radius: 0;
     padding: 0;
-    display: block;
-    transition-property: all;
-    transition-duration: 0.25s;
-    transition-timing-function: linear;
-    opacity: 0;
-    height: 0;
-    overflow: hidden;
     &.show {
-      opacity: 1;
-      height: auto;
     }
   }
 }
